# ICDE-kcore-budget

./: CMakeLists.txt  README.md  main.cpp
include/: anchoredkcore.h  anchorgroup.h  config.h  graph.h  myalgo.h  mylib.h  query.h
src/: anchoredkcore.cpp  config.cpp  graph.cpp  myalgo.cpp  mylib.cpp
